# FCC-config

./: .gitignore  .zenodo.json  CMakeLists.txt  README.md
.github/workflows/: test.yml
FCCee/Delphes/: card_IDEA.tcl  card_IDEA_3T.tcl  card_IDEA_FullSilicon.tcl  card_IDEA_better_TOFReso_3ps.tcl  card_IDEA_better_singlehitReso_30pc.tcl  card_IDEA_better_singlehitReso_30pc_lighterVXD_35pc.tcl  card_IDEA_better_singlehitReso_30pc_lighterVXD_50pc.tcl  card_IDEA_better_singlehitReso_65pc.tcl  card_IDEA_better_singlehitReso_65pc_lighterVXD_75pc.tcl  card_IDEA_heavierBP_100pc.tcl  card_IDEA_lighterBP_50pc.tcl  card_IDEA_lighterVXD_35pc.tcl  card_IDEA_lighterVXD_50pc.tcl  card_IDEA_lighterVXD_50pc_lighterBP_50pc.tcl  card_IDEA_lighterVXD_75pc.tcl  card_IDEA_shiftVXDr_plus500um.tcl  card_IDEA_worse_HCalEReso_ATLAS.tcl  card_IDEA_worse_HCalEReso_CMS.tcl  card_IDEA_worse_singlehitReso_100pc_heavierVTXLOW_100pc.tcl  card_IDEA_worse_singlehitReso_65pc_heavierVXD1stLy_100pc.tcl  edm4hep_IDEA.tcl  edm4hep_IDEA_3T.tcl  edm4hep_IDEA_worse_HCalEReso_CMS.tcl
FCCee/FullSim/: README.md
FCCee/FullSim/ILD_FCCee/: README.md
FCCee/Generator/EvtGen/: B02Dsstarpi.dec  Bc2DsNuNu_Ds2KKst.dec  Bc2DsNuNu_Ds2phipi.dec  Bc2DsNuNu_Ds2phirho.dec  Bc2Inclusive.dec  (+199 more)
Generator/EvtGen/: Bd2D0PiPi.dec  Bd2DTauNuTAUHADNU.dec  Bd2DstTauNu.dec  Bd2KsPi0.dec  Bd2KstTauTau.dec  Bd2MuMu.dec  Bs2TauTau.dec  Bs2TauTauTAUHADNU.dec  Bu2D0Pi.dec
python/FCC_config/: ComponentAccumulator.py
python/test/: ComponentAccumulator_test.py
test_data/: DataAlgFORGEANT.root  IDEA_sim_digi_reco.root  test.ipynb
(+1182 files in other folders)
